[gd_scene load_steps=7 format=3 uid="uid://du4lbdfwadder"]

[ext_resource type="Script" path="res://scenes/viewer/base_panel.gd" id="1_ban74"]
[ext_resource type="Texture2D" uid="uid://dlpouebmugmx6" path="res://resource/icons/image.svg" id="2_8ubvq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x47i7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ec30"]
bg_color = Color(0.6, 0.6, 0.6, 0.0470588)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b12mu"]
bg_color = Color(0.41, 0.41, 0.41, 0.372549)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_atpgq"]

[node name="BasePanel" type="PanelContainer"]
custom_minimum_size = Vector2(120, 160)
script = ExtResource("1_ban74")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TR_MainImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_8ubvq")
expand_mode = 1
stretch_mode = 5

[node name="DefaultTexture" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/DefaultTexture"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_8ubvq")
expand_mode = 1
stretch_mode = 5

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Title"
vertical_alignment = 1
clip_text = true

[node name="FileItemBtn" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_x47i7")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ec30")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b12mu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_atpgq")
